chore(frontend): Complete responsive UI refactor and lint fixes